// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`creates a mock Key Text field model 1`] = `
[
  {
    "config": {
      "label": "Lectus",
      "placeholder": "Lorem donec massa",
    },
    "type": "Text",
  },
  {
    "config": {
      "label": "Lectus",
      "placeholder": "Lorem donec massa",
    },
    "type": "Text",
  },
]
`;

exports[`supports number seed 1`] = `
[
  {
    "config": {
      "label": "Egestas",
      "placeholder": "Aliquam ut porttitor",
    },
    "type": "Text",
  },
  {
    "config": {
      "label": "Egestas",
      "placeholder": "Aliquam ut porttitor",
    },
    "type": "Text",
  },
]
`;
